#3/feature/spliting-html: fixing bug on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2721,7 +2721,11 @@ img {
 	font-weight: 600;
 	font-size: 14px;
 	color: #fff !important;
+	@media screen and (max-width: 767px) {
+		font-size: 12px;
+	}
 }
+
 .favorite {
 	position: absolute;
 	width: 32px;
